--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <span id="currentNumber">0</span>
         <button name="adicionar" onclick="increment()">+</button>
     </div>
-    <script src="assets/scripts.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
